[metadata]
name = dbtool
version = 0.0.3
author = Mario Luo
author_email = luokaiqiongmou@foxmail.com
description = A lightweight db tools for sql.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lkqm/dbtool.py
project_urls =
    Bug Tracker = https://github.com/lkqm/dbtool.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = dbtool
install_requires=dbutils
python_requires = >=3.6